k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krona-backend
  namespace: krona
  labels:
    app: krona-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: krona-backend
  template:
    metadata:
      labels:
        app: krona-backend
    spec:
      containers:
        - name: krona-backend
          image: ghcr.io/nulp-ai-enterprise/krona-backend:sha-d95c46c
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          startupProbe:
            httpGet:
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: krona-api.thesis-i.com
            failureThreshold: 12
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: krona-api.thesis-i.com
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: krona-api.thesis-i.com
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      imagePullSecrets:
        - name: ghcr-secret
