k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krona-backend
  namespace: krona
spec:
  type: ClusterIP
  selector:
    app: krona-backend
  ports:
    - name: http
      port: 8000
      targetPort: http
